# massif

./: AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: adjacency.rs  alignment.rs  chain_distances.rs  cli.rs  contacts.rs  dockq.rs  gather.rs  interface.rs  lib.rs  main.rs  metrics.rs  python.rs  scoring.rs  structure_clustering.rs
