[package]
name = "massif"
version = "0.4.1"
edition = "2021"
licence = "CECILL-2.1"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
serde = { version = "*", features = ["derive"] }
csv = "1.3"
itertools = "*"
clap = { version = "4", features = ["derive"] }
nalgebra = "0.29"
pdbtbx = "0.12.0"
rayon = "1.10.0"
indicatif = {version = "*", features = ["rayon"]}
rstar = {version = "*"}
indexmap = "2"
polars = { version = "0.39", features = ["csv"] }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
dockq-rs = { git = "https://github.com/NessimRaou/dockq-rs"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
